Updated the icons and layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ footer {
 #lead-content h1 {
   color: #ffffff;
   font-weight: 700;
-  font-size: 4em;
+  font-size: 3em;
   text-transform: uppercase;
   letter-spacing: 0.05em;
   line-height: 0.9em;
@@ -257,6 +257,24 @@ footer {
   font-size: 2.25em;
   margin-bottom: 15px;
 }
+.profile-image-container {
+  text-align: center; /* Centers the image */
+  margin-bottom: 10px; /* Adds some space below the image */
+}
+
+.profile-image {
+  width: 100%; /* Makes the image responsive */
+  max-width: 400px; /* Limits the maximum width of the image */
+  height: auto; /* Maintains aspect ratio */
+  border-radius: 100%; /* Makes the image circular */
+}
+
+@media (max-width: 768px) {
+  .profile-image {
+      max-width: 200px; /* Adjusts the image size on smaller screens */
+  }
+}
+
 .social-buttons {
     margin-top: 20px;
 }
