--- a/css/styles.css
+++ b/css/styles.css
@@ -259,11 +259,12 @@ footer {
 }
 .profile-image-container {
   text-align: center; /* Centers the image */
-  margin-bottom: 10px; /* Adds some space below the image */
+  margin-bottom: 10px;
+  margin-top: 30px; /* Adds some space below the image */
 }
 
 .profile-image {
-  width: 100%; /* Makes the image responsive */
+  width: 40%; /* Makes the image responsive */
   max-width: 400px; /* Limits the maximum width of the image */
   height: auto; /* Maintains aspect ratio */
   border-radius: 100%; /* Makes the image circular */
